--- a/googleplay/build.gradle
+++ b/googleplay/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 29
@@ -27,4 +29,9 @@ dependencies {
     })
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'com.github.blennerSilva:AwesomeDialog:2.0.6'
+    implementation "androidx.core:core-ktx:1.0.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
